--- a/jacoco/shiver.me.timbers.file.io/JavaFileSystemElement.java.html
+++ b/jacoco/shiver.me.timbers.file.io/JavaFileSystemElement.java.html
@@ -85,7 +85,7 @@ public class JavaFileSystemElement implements FileSystemElement {
     @Override
     public boolean equals(Object o) {
 
-<span class="pc bpc" id="L88" title="1 of 2 branches missed.">        if (this == o) return true;</span>
+<span class="fc bfc" id="L88" title="All 2 branches covered.">        if (this == o) return true;</span>
 
 <span class="fc bfc" id="L90" title="All 2 branches covered.">        if (!(o instanceof FileSystemElement)) return false;</span>
 
